# world-generator

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  HANDOVER.md  LICENSE  PLAN.md  README.md  README.zh.md  RESUME_PROMPT.md  config-100.yaml  config-50.yaml  config.docker.yaml  config.example.yaml  pyproject.toml  requirements.txt  run.sh  start_wp.sh
.github/workflows/: build.yml
Data/: download.sh  download_data.sh  utils.js  voidscript.js  wp_daemon_driver.js  wpscript.js  wpscript_ocean.js
Data/sections/: additional_ores.js  borders.js  caves.js  climate.js  custom_biomes.js  deepwater_cleanup.js  export.js  filters.js  heightmap.js  landuse.js  layers.js  mixed_layer_cleanup.js  populate_layers.js  roads.js  shift.js  steep_mountains.js  terrain.js  terrain_import.js  vanilla_ores.js  variables.js  vegetation.js  volcano.js  water.js  water_depth_adjustments.js
Data/wpscript/: 1-12.world  1-16.world  1-17.world  1-18-ex.world  1-18.world  1-19-ex.world  1-19.world
Docker/: Dockerfile  imagemagick-policy.xml
docs/: wp-daemon-design.md
src/world_generator/: __init__.py  __main__.py  cli.py  config.py  export.py  imageexport.py  log.py  mag.py  magick.py  main.py  osm.py  pipeline.py  preprocess.py  qgiscontroller.py  regionmerge.py  settings.py  tileops.py  tiles.py  tools.py  types.py  wp.py  wpscript.py
tests/: test_regionmerge.py
tools/: build_ocean_cache.py
tools/ops/: pipeline_guard.sh
tools/wp-config-reader/: ReadConfig.java  compile-and-run.sh  current-config.yaml
tools/wp-config-writer/: WriteConfig.java  (+1 more)
(+268 files in other folders)
