[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-generator"
version = "0.0.1"
description = "Minecraft world generator with OSM preprocessing via osmium + GDAL/ogr2ogr"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "pebble",
]

[project.optional-dependencies]
dev = ["mypy>=1.0", "flake8>=5.0", "black>=23.0"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/alicespaceli/world-generator"
Repository = "https://github.com/alicespaceli/world-generator"

[project.scripts]
world-generator = "world_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
world_generator = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["PyQt5.*", "qgis.*", "processing.*"]
ignore_missing_imports = true
